--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node -r esm server.js",
-    "server": "nodemon -r esm server.js"
+    "server": "nodemon -r esm server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \" npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,13 +22,14 @@
   "homepage": "https://github.com/itdev161-fa2024/Hocine-Benayache2#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^8.2.1",
     "config": "^3.3.9",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^6.7.3",
-    "nodemon": "^3.0.1"
+    "mongoose": "^6.7.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^8.2.1",
+    "nodemon": "^3.0.1"
+  }
 }
